[package]
name = "wasm-auth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
wee_alloc = "0.4"
tokio = { version = "1.44.1", features = ["full"] }
